[package]
name = "twitch"
version = "0.1.0"
edition = "2024"

[dependencies]
twitch_api = { version = "0.7.2", features = ["eventsub", "twitch_oauth2", "helix", "hmac", "client", "reqwest"] }
serde = "1"
serde_json = { version = "1" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }
dotenvy = "0.15.7"
eyre = { version = "0.6" }
futures = "0.3.28"
hyper = "1.4.1"
reqwest = { version = "0.12.2", features = ["json"] }
lapin = "3.7.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
regex = "1.12.2"
apply = "0.3.0"
